# python-aup

03-AI-Modern-Python-Programming/course1_basics_level/: Lesson_1.ipynb  Lesson_2.ipynb  Lesson_3.ipynb  Lesson_4.ipynb  Lesson_5.ipynb
03-AI-Modern-Python-Programming/course2_intermediate_level/: Lesson_1_List.ipynb  Lesson_2_Control_Flow_Constructs.ipynb  Lesson_3_Loops.ipynb  Lesson_4_List_Comprehension.ipynb  Lesson_5-Tuple.ipynb  Lesson_6_Dictionary.ipynb  Lesson_7_Function.ipynb  Lesson_8_Decorators.ipynb  Lesson_9_Exception_Handling.ipynb
03-AI-Modern-Python-Programming/course3_advance_level/: Lesson_1_OOP.ipynb
03-AI-Modern-Python-Programming/course3_advance_level/Extras/: Procedural vs OOP Example.ipynb  oop_become_necessory.md
03-AI-Modern-Python-Programming/course4_AI-Assisted-Python-Programming/: Chapter1.ipynb  Chapter2.ipynb  practice1.py
05-uv/: README.md
05-uv/project3/: pyproject.toml
05-uv/project3/src/project2/: __init__.py
05-uv/project3/src/project3/: __init__.py
05-uv/project3_copy/: pyproject.toml
PROJECTS/homeword_projects/00_intro_python/: 01_add_two_numbers.md  02_agreement_bot.md  03_fahrenheit_to_celsius.md  04_how_old_are_they.md  05_triangle_perimeter.md  06_square_number.md
