[project]
name = "project3"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Sajid Khan Afridi", email = "uetianafridi@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "langgraph>=0.2.71",
    "streamlit>=1.42.0",
]

[project.scripts]
project3 = "project3:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
